# example-text2sql

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conversation-memory.md
docs/diagrams/: memory.spec.json
eval/: cases.yml  cases_qbo.yml  history.jsonl  verified_qbo.yml
models/: qbo.yml  sales.yml
slides/: anatomy_stack.py  synonyms_map.py
slides/.specs/: text2sql-business-deck.json  text2sql-deck.json
specs/: README.md  improvements.md
specs/001-text-to-sql-engine/: plan.md  spec.md  tasks.md
specs/002-chat-ui/: plan.md  spec.md  tasks.md
specs/003-eval-harness/: plan.md  spec.md  tasks.md
specs/004-qbo-poc/: domain.md
specs/005-semantic-sql-frontend/: spec.md
specs/006-cross-dialect-portability/: spec.md
specs/007-observability-and-tokens/: spec.md
specs/008-charts-and-storytelling/: spec.md
specs/009-eval-quality-tracking/: spec.md
specs/010-cte-support/: spec.md
specs/decisions/: 0001-semantic-sql-over-fixed-ir.md  0002-keep-vega-lite.md  (+3 more)
tests/: test_app_helpers.py  test_charts.py  test_compare.py  test_compiler.py  test_dialect_mysql.py  test_dialect_postgres.py  test_engine_e2e.py  test_eval_dataset.py  test_eval_history.py  test_eval_runner.py  test_eval_scorer.py  test_executor.py  test_ir.py  test_memory.py  test_model.py  test_model_map.py  test_planner_anthropic.py  test_qbo_model.py  test_rewriter.py  test_semantic_sql.py  test_story.py  test_summarizer.py  test_timeseries_viz.py  test_trace_store.py  test_usage.py  test_validator.py  util.py
text2sql/: config.py
(+33 files in other folders)
