[project]
name = "text2sql"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111.0",
    "langsmith>=0.10.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sqlglot>=30.12.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
]
